# saegim

./: .env.example  .env.gpu  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  RELEASE.md  cliff.toml  docker-compose.chandra.yml  docker-compose.yml
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml
docs/: README.md  index.md
docs/architecture/: README.md  data-curation.md  data-schema.md  docir-architecture.md  extraction-pipeline.md  labeling-workflow.md  multi-user-collaboration.md  phase3-implementation-plan.md
docs/deployment/: docker.md  kubernetes.md  quickstart.md
docs/dev/: docker.md  kubernetes.md
docs/guide/: quickstart.md
e2e/: README.md  docker-compose.e2e.yml  package.json  playwright.config.ts  tsconfig.json  vitest.browser.config.ts  vitest.config.ts  vitest.gpu.config.ts
e2e/helpers/: api.ts  mcp.ts  pdf.ts  timer.ts
e2e/tests/: attribute-classifier.spec.ts  attribute-classifier.test.ts  benchmark.spec.ts  benchmark.test.ts  browser-auth-mcp.test.ts  export-zip.test.ts  extract-text.test.ts  extraction.spec.ts  extraction.test.ts  health.spec.ts  health.test.ts  hybrid-labeling.spec.ts  ocr-config.spec.ts  ocr-config.test.ts  project-members.test.ts  project-progress.test.ts  re-extract.test.ts  reading-order.test.ts  relations.test.ts  users.test.ts  workflow.spec.ts
k8s/: backend-deployment.yaml  configmap.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  postgres-statefulset.yaml
k8s/base/: secret.yaml  (+7 more)
saegim-backend/: .copier-answers.yml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.package  Dockerfile.source  README.md  cliff.toml  mkdocs.yml  pyproject.toml
saegim-backend/.github/workflows/: ci.yml
saegim-backend/docs/: architecture.md  development.md  getting-started.md  index.md  overview.md
saegim-backend/docs/design/: architecture.md  database.md
saegim-backend/docs/dev/: development.md
saegim-backend/docs/guide/: api.md  getting-started.md  overview.md
saegim-backend/migrations/: 001_init.sql  002_extraction_status.sql  002_multi_user.sql  002_ocr_config.sql  002_rename_engine_types.sql  init.sql
saegim-backend/scripts/: start_server.py
saegim-backend/src/saegim/: __init__.py  app.py  cli.py
saegim-backend/src/saegim/api/: __init__.py  deps.py  settings.py
saegim-backend/src/saegim/api/routes/: admin.py  auth.py  documents.py  export.py  health.py  pages.py  predict.py  projects.py  tasks.py  users.py
saegim-backend/src/saegim/core/: database.py
saegim-backend/src/saegim/repositories/: __init__.py  admin_repo.py  document_repo.py  page_repo.py  progress_repo.py  project_member_repo.py  project_repo.py  refresh_token_repo.py  task_repo.py  user_repo.py
saegim-backend/src/saegim/schemas/: admin.py  annotation.py  auth.py  document.py  export.py  page.py  progress.py  project.py  project_member.py  task.py  user.py
saegim-backend/src/saegim/services/: attribute_classifier.py  docir.py  docling_layout_service.py  document_service.py  export_service.py  extraction_service.py  gemini_ocr_service.py  labeling_service.py  layout_types.py  mineru_extraction_service.py  ocr_connection_test.py  ocr_pipeline.py  ocr_provider.py  pp_doclayout_service.py  ppstructure_service.py  text_extraction_service.py  vllm_ocr_service.py
saegim-backend/src/saegim/services/adapters/: __init__.py  base.py  chandra.py  lightonocr.py  paddleocr_vl.py  resolver.py
saegim-backend/src/saegim/services/engines/: __init__.py  base.py  commercial_api_engine.py  docling_engine.py  factory.py  integrated_server_engine.py  pdfminer_engine.py  pymupdf_engine.py  split_pipeline_engine.py  vllm_engine.py
saegim-backend/src/saegim/services/exporters/: __init__.py  omnidocbench.py
saegim-backend/src/saegim/tasks/: __init__.py  celery_app.py  extraction_task.py  ocr_extraction_task.py
saegim-backend/tests/: conftest.py  test_app_bootstrap.py
saegim-backend/tests/api/: test_admin.py  test_app.py  test_auth.py  test_deps.py  test_documents.py  test_export.py  test_health.py  test_pages.py  test_predict.py  test_progress.py  test_project_members.py  test_project_ocr_config.py  test_projects.py  test_settings.py  test_task_workflow.py  test_tasks.py  test_users.py
saegim-backend/tests/repositories/: test_normalize_ocr_config.py  test_project_member_repo.py  test_refresh_token_repo.py  test_user_repo.py
saegim-backend/tests/schemas/: test_auth_schema.py  test_extract_text_schema.py  test_page_schema.py  test_progress_schema.py  test_project_schema.py  test_task_schema.py
saegim-backend/tests/services/: test_attribute_classifier.py  test_docir.py  test_docling_layout_service.py  test_document_service.py  test_export_service.py  test_extraction_service.py  test_gemini_ocr_service.py  test_labeling_service.py  test_mineru_extraction_service.py  test_ocr_connection_test.py  test_ocr_pipeline.py  test_ocr_provider.py  test_pp_doclayout_service.py  test_ppstructure_service.py  test_sample_pdf_extraction.py  test_text_extraction_service.py  test_vllm_ocr_service.py
saegim-backend/tests/services/adapters/: test_chandra.py  test_lightonocr.py  test_paddleocr_vl.py  test_resolver.py
saegim-backend/tests/services/engines/: test_base.py  test_commercial_api_engine.py  test_docling_engine.py  test_factory.py  test_integrated_server_engine.py  test_pdfminer_engine.py  test_pymupdf_engine.py  test_split_pipeline_engine.py  test_vllm_engine.py
saegim-backend/tests/services/exporters/: test_omnidocbench.py
saegim-backend/tests/tasks/: test_extraction_task.py  test_ocr_extraction_task.py
saegim-frontend/: .env.example  .gitignore  .markdownlint-cli2.jsonc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  Dockerfile  README.md  bunfig.toml  components.json  eslint.config.js  index.html  nginx-main.conf  package.json  svelte.config.js  tsconfig.app.json  vite.config.ts
saegim-mineru/: Dockerfile  docker-entrypoint.sh  pyproject.toml
saegim-mineru/src/saegim_mineru/: __init__.py  app.py
scripts/: release.sh
(+164 files in other folders)
