[project]
name = "saegim-mineru"
version = "0.0.0"
description = "MinerU PDF extraction HTTP service (AGPL-licensed, isolated from main app)"
authors = [
    {name="Jongsu Kim", email="jongsukim8@gmail.com"}
]
readme = "README.md"
dependencies = [
    "colorlog~=6.10.1",
    "fastapi[standard]~=0.128.0",
    "mineru[pipeline]",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
]
requires-python = ">=3.12, <4.0"
license = "AGPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 13",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
]

[project.optional-dependencies]
cu130 = [
  "torch==2.10.0",
  "torchvision==0.25.0",
]
cu128 = [
  "torch==2.10.0",
  "torchvision==0.25.0",
]
cu126 = [
  "torch==2.10.0",
  "torchvision==0.25.0",
]
cpu = [
  "torch==2.10.0",
  "torchvision==0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest~=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saegim_mineru"]

[tool.uv]
package = true
native-tls = false
managed = true
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu130" },
    { extra = "cu128" },
    { extra = "cu126" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin' and sys_platform != 'linux' and sys_platform != 'win32'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin' and sys_platform != 'linux' and sys_platform != 'win32'" },
]

[tool.uv.pip]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
